--- a/core/res/res/values/banana_config.xml
+++ b/core/res/res/values/banana_config.xml
@@ -25,4 +25,11 @@
      <string-array name="config_deviceKeyHandlerClasses" translatable="false">
      </string-array>
 
+    <!-- Global Actions prefs list -->
+    <string-array translatable="false" name="custom_config_globalActionsList">
+        <item>emergency</item>
+        <item>power</item>
+        <item>restart</item>
+        <item>logout</item>
+    </string-array>
 </resources>
