--- a/core/res/res/values/banana_config.xml
+++ b/core/res/res/values/banana_config.xml
@@ -61,5 +61,6 @@
         <item>airplane</item>
         <item>settings</item>
         <item>lockdown</item>
+        <item>bugreport</item>
     </string-array>
 </resources>
