--- a/packages/SystemUI/res/values/banana_strings.xml
+++ b/packages/SystemUI/res/values/banana_strings.xml
@@ -209,4 +209,7 @@
     <string name="tristate_rotation_0">Portrait</string>
     <string name="tristate_rotation_90">Landscape (90°)</string>
     <string name="tristate_rotation_270">Landscape (270°)</string>
+    <string name="tristate_refresh_auto">Auto-refresh</string>
+    <string name="tristate_refresh_min">Min-refresh</string>
+    <string name="tristate_refresh_max">Max-refresh</string>
 </resources>
