--- a/core/res/res/values/colors.xml
+++ b/core/res/res/values/colors.xml
@@ -452,5 +452,7 @@
     <color name="side_fps_toast_background">#F7F9FA</color>
     <color name="side_fps_text_color">#191C1D</color>
     <color name="side_fps_button_color">#00677E</color>
-
+    
+    <!-- Seekbar progress -->
+    <color name="seekbar_progress_thumb">@android:color/system_accent1_100</color>
 </resources>
